--- a/sound/main.css
+++ b/sound/main.css
@@ -12,7 +12,7 @@ body{
     background-color: black;
     color:white;
     padding:5px 7%;
-    max-width: 1400px;
+    max-width: 1440px;
     margin: 0 auto;
 }
 .header-line{
@@ -130,13 +130,30 @@ body{
         max-width: 768px;
     }
     .nav-item{
-        color: #fff;
         font-size: 14px;
         line-height: 50px;
-        transition: 0.3s;
-        cursor: pointer;
     }
     .header-line img{
         height: 40px;
+    }
+    .info-footer{
+        font-size: 14px;
+    }
+    .social-media{
+        width: 120px;
+    }
+    .rss{
+        width: 110px;
+        height: 45px;
+    }
+}
+@media (max-width:480px){
+    .container{
+        padding:5px 2%;
+        max-width: 480px;
+    }
+    .nav-item{
+        font-size: 12px;
+        line-height: 50px;
     }
 }
